DDI-Lifecycle/3.3/model/_sources/item-types/Maintainable/index.rst.txt
Maintainable
------------

Adds the attribute identifying this as a maintainable object. All content of Maintainable is considered to be administrative metadata. Note that changes to the administrative metadata does not drive a change in the version of the parent objects. All content of Maintainable with the exception of 'Note' is considered to be administrative metadata. Note that changes to the administrative metadata does not drive a change in the version of the parent objects. See DDI 3.2 Technical Documentation: Part I for further details.

Properties
~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "Note",":doc:`/composite-types/NoteType/index`","0..n","Note allows for the attachment of a piece of additional information to any object with an ID. Note facilitates capturing temporary processing notes such as ""Review and approval required"". A single note can be attached to multiple objects by reference to the objects. Note may also contain content for a needed object that has been reported for addition in a later version of the schema. Ideally this should be handled by a local extension, but Note can accommodate run-time extensions when required. The Note should be housed within the Maintainable object that contains the referenced objects. In this way the user is ensured of receiving all known Note attachments when the maintainable content is delivered. This means that if a Note references objects within multiple Maintainable objects, the Note should be repeated in each Maintainable and reference only those objects with that Maintainable."
   "Software",":doc:`/composite-types/SoftwareType/index`","0..n","Indicate the software used to create and/or manage the metadata. This is repeatable to allow for multiple softwares or multiple functions. If this information is important it is advisable to provide it in each maintainable so that it does not become separated from the internal content if the metadata is re-factored."
   "MetadataQuality",":doc:`/composite-types/MetadataQualityType/index`","0..n","An assessment of the quality of the metadata within the Maintainable object, e.g. the quality of the transcription, completeness, editing status, etc."
   "ExternalReferenceDefaultURI","anyURI","0..1","Use to provide a default value for the URI of external references. Use of a URI in a reference within this maintainable overrides the value entered here. Nested maintainables should redeclare the contents of this attribute for clarity."
   "Lang","language","0..1","This is used to designate the language of the metadata content of the maintainable. If a lower level xml:lang attribute conflicts with the content at the maintainable level, the object level value takes precedence."

Properties Inherited from Versionable
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "URN","string","1..1",""
   "Agency","string","1..1",""
   "ID","string","1..1",""
   "Version","string","1..1",""
   "UserID",":doc:`/composite-types/UserIDType/index`","0..n","Allows for the specification of identifiers other than the specified DDI identification of the object. This may be a legacy ID from DDI-C, a system specific ID such as for a database or registry, or a non-DDI unique identifier. As the identifier is specific to a system the system must be identified with the UserID structure."
   "UserAttributePair",":doc:`/composite-types/StandardKeyValuePairType/index`","0..n","A system specific user defined property of the object expressed as a key/value pair. As this is specific to an individual system the use of controlled vocabularies for the key is strongly recommended."
   "VersionResponsibility","string","0..1","Person or organization within the MaintenanceAgency responsible for the version change. If it is important to retain the affiliation between and individual responsible for the version and his/her agency, it may be included in this notation. This is primarily intended for internal use."
   "VersionResponsibilityReference",":doc:`/item-types/Agent/index`","0..1","Reference person or organization within the MaintenanceAgency responsible for the version change, as described in an OrganizationScheme. If it is important to retain the affiliation between and individual responsible for the version and his/her agency, a Relation should be created between the individual referenced here and his/her organization. This is primarily intended for internal use."
   "VersionRationale",":doc:`/composite-types/VersionRationaleType/index`","0..1","Textual description of the rationale/purpose for the version change and a coded value to provide an internal processing flag within and organization or system. Note that versioning can only take place on objects owned by the specified DDI Agency. If you are creating a local instance of an object from another agency for current or future modification use BasedOnObject. If the changes being made result in what you determine to be new object rather than a version of a previous object, i.e. the change is too extensive to consider it a version of the existing object, create a new object and use BasedOnObject to provide a link to the object or objects that were a basis for the new object."
   "BasedOnObject",":doc:`/composite-types/BasedOnObjectType/index`","0..1","Use when creating an object that is based on an existing object or objects that are managed by a different agency or when the new object is NOT simply a version change but you wish to maintain a reference to the object that served as a basis for the new object. BasedOnObject may contain references to any number of objects which serve as a basis for this object, a BasedOnRationalDescription of how the content of the referenced object was incorporated or altered, and a BasedOnRationalCode to allow for specific typing of the BasedOnReference according to an external controlled vocabulary."
   "RelatedOtherMaterialReference",":doc:`/item-types/OtherMaterial/index`","0..n","The inclusion of an existing OtherMaterial by reference. Use for any type of OtherMaterial not specifically addressed by an inline description for such as ExternalAid in QuestionItem."
   "VersionDate","cogsDate","0..1","Date of version using the union set BaseDateType. Duration should not be used in this field, even though allowed by the ISO format enforced by the parser."
   "IsPublished","boolean","0..1","Indicates that the maintainable will not be changed without versioning, and is a stable target for referencing."


Item Type Hierarchy
~~~~~~~~~~~~~~~~~~~

* :doc:`/item-types/Versionable/index`
    * **Maintainable**
        * :doc:`/item-types/Archive/index`
        * :doc:`/item-types/BaseLogicalProduct/index`
        * :doc:`/item-types/CategoryScheme/index`
        * :doc:`/item-types/ClassificationFamily/index`
        * :doc:`/item-types/CodeList/index`
        * :doc:`/item-types/CodeListScheme/index`
        * :doc:`/item-types/Comparison/index`
        * :doc:`/item-types/ConceptScheme/index`
        * :doc:`/item-types/ConceptualComponent/index`
        * :doc:`/item-types/ConceptualVariableScheme/index`
        * :doc:`/item-types/ControlConstructScheme/index`
        * :doc:`/item-types/DataCollection/index`
        * :doc:`/item-types/DDIInstance/index`
        * :doc:`/item-types/DDIProfile/index`
        * :doc:`/item-types/DevelopmentActivityScheme/index`
        * :doc:`/item-types/GeographicLocationScheme/index`
        * :doc:`/item-types/GeographicStructureScheme/index`
        * :doc:`/item-types/Group/index`
        * :doc:`/item-types/InstrumentScheme/index`
        * :doc:`/item-types/InterviewerInstructionScheme/index`
        * :doc:`/item-types/LocalHoldingPackage/index`
        * :doc:`/item-types/ManagedRepresentationScheme/index`
        * :doc:`/item-types/MeasurementScheme/index`
        * :doc:`/item-types/NCubeScheme/index`
        * :doc:`/item-types/OrganizationScheme/index`
        * :doc:`/item-types/OtherMaterialScheme/index`
        * :doc:`/item-types/PhysicalDataProduct/index`
        * :doc:`/item-types/PhysicalInstance/index`
        * :doc:`/item-types/PhysicalInstanceGroup/index`
        * :doc:`/item-types/PhysicalStructureScheme/index`
        * :doc:`/item-types/ProcessingEventScheme/index`
        * :doc:`/item-types/ProcessingInstructionScheme/index`
        * :doc:`/item-types/QualityScheme/index`
        * :doc:`/item-types/QuestionScheme/index`
        * :doc:`/item-types/RecordLayoutScheme/index`
        * :doc:`/item-types/RepresentedVariableScheme/index`
        * :doc:`/item-types/ResourcePackage/index`
        * :doc:`/item-types/SamplingInformationScheme/index`
        * :doc:`/item-types/StudyUnit/index`
        * :doc:`/item-types/UnitTypeScheme/index`
        * :doc:`/item-types/UniverseScheme/index`
        * :doc:`/item-types/VariableScheme/index`


Relationships
~~~~~~~~~~~~~
The following types reference this type.

* :doc:`/item-types/ApprovalReview/index`
* :doc:`/item-types/GenericMap/index`
* :doc:`/composite-types/BasedOnObjectType/index`
* :doc:`/composite-types/ItemMapType/index`
* :doc:`/composite-types/LinkingMapType/index`
* :doc:`/composite-types/RelationshipType/index`
* :doc:`/composite-types/ResourceUsedType/index`

.. container:: image

   |stub|

.. |stub| image:: ../../images/Maintainable.svg

